<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/id_btn_createBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="58dp"
        android:onClick="onClickCreateBook"
        android:text="@string/btn_createBook"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_createReader"
        app:layout_constraintStart_toStartOf="@+id/id_btn_createReader" />

    <Button
        android:id="@+id/id_btn_createReader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="47dp"
        android:onClick="onClickCreateReader"
        android:text="@string/btn_createReader"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_listBook"
        app:layout_constraintStart_toStartOf="@+id/id_btn_listBook" />

    <Button
        android:id="@+id/id_btn_listBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:text="@string/btn_listBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_btn_listReader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:text="@string/btn_listReader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_btn_listBook" />

</androidx.constraintlayout.widget.ConstraintLayout>