<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reader.DisplayListReaderActivity">

    <TextView
        android:id="@+id/id_textView_columNameIdentifiantReader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/TextViewIdentifiant"
        app:layout_constraintBottom_toTopOf="@+id/id_recyclerView_reader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_textView_columNameFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/editTextFirstname"
        app:layout_constraintStart_toEndOf="@+id/id_textView_columNameIdentifiantReader"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_textView_columNameLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/editTextLastname"
        app:layout_constraintStart_toEndOf="@+id/id_textView_columNameFirstname"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_textView_columNameEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/editTextEmail"
        app:layout_constraintStart_toEndOf="@+id/id_textView_columNameLastname"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/id_recyclerView_reader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_textView_columNameIdentifiantReader" />

</androidx.constraintlayout.widget.ConstraintLayout>